@@ -1,6 +1,7 @@
 v1.6
 	prevent vertical resizing when collapsed (remove or fix this?)
 	queue updates if wanting to do one while another is happening
+	set sonata icon as image file if resetting album art instead of using NONE_FLAG stuff
 	plugin support
 		- single instance (could remove dbus; faster on startup, less memory)
 		- artwork
